--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1",
+    "mqtt": "^5.7.2",
+    "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "ws": "^7.4.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
