--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "mqtt": "^5.7.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.37.3",
+    "upsert": "^0.0.3",
     "ws": "^7.4.6"
   },
   "devDependencies": {
