--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "ws": "^7.4.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.6.2"
   }
 }
