Some bunch of cool new features

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-MQTT_HOST=cs.rts-iot.ru
-MQTT_PORT=1885
+MQTT_HOST=95.163.228.38
+MQTT_PORT=1883
 MQTT_USERNAME=
 MQTT_PASSWORD=
 DATABASE_URL=postgres://spmsuser:spmspass@localhost:5432/spms
