--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,11 @@
     "@coreui/coreui": "^5.0.0",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
-    "@coreui/react": "^5.0.0",
+    "@coreui/react": "^5.1.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
     "core-js": "^3.36.1",
@@ -42,6 +43,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-table": "^7.8.0",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.4"
   },
