--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ MQTT_HOST=95.163.228.38
 MQTT_PORT=1883
 MQTT_USERNAME=
 MQTT_PASSWORD=
-DATABASE_URL=postgres://spmsuser:spmspass@localhost:5432/spms
+DATABASE_URL=postgres://spmsuser:spmspass@194.164.52.193:5432/spms
 JWT_SECRET=your_jwt_secret
