--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:5000/api
-REACT_APP_WS_URL=ws//localhost:8080
+REACT_APP_API_URL=http://194.164.52.193:5000/api
+REACT_APP_WS_URL=ws//194.164.52.193:8080
 PORT=4000
