--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,9 @@
     "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0",
     "redux": "5.0.1",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "svg2json": "^2.0.0",
+    "svgson": "^5.3.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
