--- a/backend/package.json
+++ b/backend/package.json
@@ -13,16 +13,19 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "iconv-lite": "^0.6.3",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mqtt": "^5.7.2",
     "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.4.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "upsert": "^0.0.3",
-    "ws": "^7.4.6"
+    "ws": "^7.4.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
