--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "iconv-lite": "^0.6.3",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^8.5.1",
