--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "core-js": "^3.36.1",
     "d3": "^7.9.0",
     "leaflet-draw-locales": "^1.2.3",
+    "leaflet.heat": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
